[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Jan Niklas Richter <5812215+ArcticXWolf@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
itertools = "0.10.5"
ndarray = "0.15.6"
parse-display = "0.7.0"
pico-args = "0.5.0"
priority-queue = "1.3.0"
radix_fmt = "1.0.0"
regex = "1.7.0"
